fleet simulator added

--- a/ElasticDemo/DataPusherWorker/appsettings.json
+++ b/ElasticDemo/DataPusherWorker/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "elasticsearch": {
+    "index": "demoridedata",
+    "url": "http://localhost:9200/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
