websocket client added

--- a/ElasticDemo/DataPusherWorker/appsettings.json
+++ b/ElasticDemo/DataPusherWorker/appsettings.json
@@ -3,6 +3,10 @@
     "index": "demoridedata",
     "url": "http://localhost:9200/"
   },
+  "socketserver": {
+    "url": "ws://localhost:8181",
+    "urlX": "wss://socketsbay.com/wss/v2/1/demo/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
