--- a/ElasticDemo/DataPusherWorker/appsettings.json
+++ b/ElasticDemo/DataPusherWorker/appsettings.json
@@ -7,6 +7,13 @@
     "url": "ws://localhost:8181",
     "urlX": "wss://socketsbay.com/wss/v2/1/demo/"
   },
+  "Queueing": {
+    "AWSRegion": "eu-central-1",
+    "QueueUrl": "https://sqs.eu-central-1.amazonaws.com/714210924730/fleetapp-events",
+    "ReceiveMessageWaitTimeInSeconds": 5, //this should be equal or less than the setting setup in AWS Console for queue.
+    "PollingIntervalInSeconds": 1,
+    "MaxNumberOfMessagesPerRequest": 10
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
